--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "safespot-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "SafeSpot Backend Server",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
+ "scripts": {
+  "start": "node index.js",
+  "dev": "node --dns-result-order=ipv4first index.js"
+},
   "keywords": [],
-  "author": "",
+  "author": "swetha",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.6",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.5",
-    "nedb": "^1.8.0",
-    "socket.io": "^4.8.3"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "socket.io": "^4.7.2"
   }
 }
