--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "SafeSpot Backend Server",
   "main": "index.js",
- "scripts": {
-  "start": "node index.js",
-  "dev": "node --dns-result-order=ipv4first index.js"
-},
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node --dns-result-order=ipv4first index.js"
+  },
   "keywords": [],
   "author": "swetha",
   "license": "ISC",
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.0.0",
     "socket.io": "^4.7.2"
   }
