--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "expo-image-picker": "^17.0.10",
+    "expo-location": "~19.0.8",
+    "expo-task-manager": "~14.0.9",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2"
