--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-task-manager": "~14.0.9",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.3"
   }
 }
