--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   }
 }
