Add node-fetch dependency

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
